Add new testimonial and update payment options
Added a testimonial from Slyifern in testimonials.js. Updated payments.html to include Venmo, Stripe, and Ko-Fi as preferred payment methods, detailed fees, and commented out the Special Services section.

--- a/services/payments.html
+++ b/services/payments.html
@@ -80,14 +80,17 @@
             </p>
             <div class="notice-container">
                 <ul>
-                    <li><strong>Preferred:</strong> Pay with PayPal or Cash App (secure, no Roblox tax).</li>
-                    <li><strong>Robux:</strong> Must use DevEx rate (10,000 Robux = $38 USD, 30,000 Robux = $114 USD).</li>
-                    <li><strong>Robux + Gamepasses, T-Shirts, DevProduct:</strong> Add 30% fee for Roblox's tax.</li>
-                    <p>To avoid extra costs, use Group Payouts.</p>
+                        <li><strong>Preferred:</strong> Pay with Venmo, Stripe, Ko-Fi, or Cash App.</li>
+                        <li><strong>Venmo:</strong> No extra fees</li>
+                        <li><strong>Stripe:</strong> +5% - Processing fees</li>
+                        <li><strong>Ko-Fi:</strong> +10% - Processing fees</li>
+                        <li><strong>Robux:</strong> Must use DevEx rate (10,000 Robux = $38 USD, 30,000 Robux = $114 USD).</li>
+                        <li><strong>Robux, Gamepasses, T-Shirts, DevProduct:</strong> Add 30% fee for Roblox's tax.</li>
+                        <p>To avoid extra costs, use Group Payouts or Venmo.</p>
                 </ul>
             </div>
 
-            <div class="col-lg-14 mb-4">
+            <!-- <div class="col-lg-14 mb-4">
                 <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                     <h4 style="color: #ff3e3e;">Special Services</h4>
                     <p>If I reach out to you on any social media (Discord, Instagram, Roblox, etc.), then chances are I
@@ -101,6 +104,7 @@
                     </ul>
                 </div>
             </div>
+            
             <div id="discount-card" class="card discount-card"
                 style="background-color: #222222; color: #f0f0f0; padding: 1rem; margin-bottom: 1rem;">
                 <h3 style="color: #ff3e3e;">Limited Time Discounts</h3>
@@ -108,8 +112,7 @@
                 <p>Discounts are applied when you hire me, which means even if the discount ends during whatever you
                     hired me for, you will still get the discounted rate for the entire duration of our work together.
                 </p>
-            </div>
-
+            </div> -->
             
             <div class="currency-bar" id="currency-bar">
                 <div class="currency-toggle" id="currency-toggle" data-mode="FIAT" role="tablist" aria-label="Price currency">
