--- a/services/payments.html
+++ b/services/payments.html
@@ -139,16 +139,16 @@
                     <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                         <h4 style="color: #5000e6;">Building</h4>
                         <p>
-                            Starting at: <strong class="price usd" data-original-price="8">Loading...</strong>
+                            Starting at: <strong class="price usd" data-original-price="10">Loading...</strong>
                         </p>
                         <ul>
                             <li>
                                 Simple Builds (e.g. small props, basic structures): <strong style="color: #f0f0f0;"
-                                    class="price usd" data-original-price="8">$8/build</strong>
+                                    class="price usd" data-original-price="10">$10/build</strong>
                             </li>
                             <li>
                                 Complex Builds (e.g. terrains, structures, interiors): <strong style="color: #f0f0f0;"
-                                    class="price usd" data-original-price="14">$14/build</strong>
+                                    class="price usd" data-original-price="16">$16/build</strong>
                             </li>
                             <li>
                                 Really Complex Builds (e.g. large builds, realistic terrain, exteriors & interiors):
@@ -162,39 +162,39 @@
                     <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                         <h4 style="color: #5000e6;">Scripting (Luau, HTML, JavaScript, Python)</h4>
                         <p>
-                            Starting at: <strong class="price usd" data-original-price="4">Loading...</strong>
+                            Starting at: <strong class="price usd" data-original-price="10">Loading...</strong>
                         <ul>
                             <li>
                                 Basic Scripts (ex; GUI interactions, simple mechanics): <strong style="color: #f0f0f0;"
-                                    class="price usd" data-original-price="4">$4/script</strong>
+                                    class="price usd" data-original-price="10">$10/script</strong>
                             </li>
                             <li>
                                 Advanced Scripts (ex; AI systems, movement systems): <strong style="color: #f0f0f0;"
-                                    class="price usd" data-original-price="13">$13/script</strong>
+                                    class="price usd" data-original-price="25">$25/script</strong>
                             </li>
                             <li>
                                 Modular Systems (ex; melee system, ): <strong style="color: #f0f0f0;" class="price usd"
-                                    data-original-price="18">$18/script</strong>
+                                    data-original-price="30">$30/script</strong>
                             </li>
                             <li>
                                 Backend Services & Integrations (ex; DataStore, Web API): <strong
                                     style="color: #f0f0f0;" class="price usd"
-                                    data-original-price="13">$13/script</strong>
+                                    data-original-price="27">$27/script</strong>
                             </li>
                             <li>
                                 <strong>Languages (ex; html website, python app):</strong>
                                 <ul>
                                     <li>
                                         HTML: <strong style="color: #f0f0f0;" class="price usd"
-                                            data-original-price="10">$10/script</strong>
+                                            data-original-price="14">$14/script</strong>
                                     </li>
                                     <li>
                                         Javascript: <strong style="color: #f0f0f0;" class="price usd"
-                                            data-original-price="11">$11/script</strong>
+                                            data-original-price="19">$19/script</strong>
                                     </li>
                                     <li>
                                         Python: <strong style="color: #f0f0f0;" class="price usd"
-                                            data-original-price="13">$13/script</strong>
+                                            data-original-price="24">$24/script</strong>
                                     </li>
                                 </ul>
                             </li>
@@ -205,7 +205,7 @@
                     <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                         <h4 style="color: #5000e6;">Animation (Blender, Moon Animator, Roblox Animation Editor)</h4>
                         <p>
-                            Starting at: <strong class="price usd" data-original-price="8">Loading...</strong>
+                            Starting at: <strong class="price usd" data-original-price="14">Loading...</strong>
                         </p>
                         <ul>
                             <li>
@@ -213,34 +213,34 @@
                                 <ul>
                                     <li>
                                         Basic Animation (ex; idle, walk cycle): <strong style="color: #f0f0f0;"
-                                            class="price usd" data-original-price="12">$12/animation</strong>
+                                            class="price usd" data-original-price="19">$19/animation</strong>
                                     </li>
                                     <li>
                                         Advanced Animation (ex; fight scenes, cutscenes): <strong
                                             style="color: #f0f0f0;" class="price usd"
-                                            data-original-price="25">$25/animation</strong>
+                                            data-original-price="35">$35/animation</strong>
                                     </li>
                                     <li>
                                         Custom Rig (with multiple bones and joints): <strong style="color: #f0f0f0;"
-                                            class="price usd" data-original-price="12">$14/animation</strong>
+                                            class="price usd" data-original-price="25">$25/animation</strong>
                                     </li>
                                     <li>
                                         Rigging (adding bones to a custom model):<strong>Adding</strong>
                                         <strong style="color: #f0f0f0;" class="price usd"
-                                            data-original-price="5">$5/animation</strong>
+                                            data-original-price="14">$14/animation</strong>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <strong>Moon Animator (Roblox):</strong>
+                                <strong>Moon Animator (Roblox) (Does not include using Moon Animator for Events/Additions to Blender Animations):</strong>
                                 <ul>
                                     <li>
                                         Character Animation (ex; basic movement): <strong style="color: #f0f0f0;"
-                                            class="price usd" data-original-price="12">$12/animation</strong>
+                                            class="price usd" data-original-price="28">$28/animation</strong>
                                     </li>
                                     <li>
                                         Cutscene/s with Camera: <strong style="color: #f0f0f0;" class="price usd"
-                                            data-original-price="19">$19/animation</strong>
+                                            data-original-price="40">$40/animation</strong>
                                     </li>
                                 </ul>
                             </li>
@@ -248,16 +248,16 @@
                                 <strong>Roblox Animation Editor:</strong>
                                 <ul>
                                     <li>
-                                        R6 Rig (ex; walk loop): <strong style="color: #f0f0f0;" class="price usd"
-                                            data-original-price="8">$8/animation</strong>
+                                        Basic R6 Rig: <strong style="color: #f0f0f0;" class="price usd"
+                                            data-original-price="19">$19/animation</strong>
                                     </li>
                                     <li>
-                                        R15 Rig (more complex due to joints): <strong style="color: #f0f0f0;"
-                                            class="price usd" data-original-price="12">$12/animation</strong>
+                                        Basic R15 Rig: <strong style="color: #f0f0f0;"
+                                            class="price usd" data-original-price="26">$26/animation</strong>
                                     </li>
                                     <li>
                                         Custom Rig (with multiple bones and joints): <strong style="color: #f0f0f0;"
-                                            class="price usd" data-original-price="18">$18/animation</strong>
+                                            class="price usd" data-original-price="36">$36/animation</strong>
                                     </li>
                                 </ul>
                             </li>
@@ -284,7 +284,7 @@
                             </li>
                             <li>
                                 Optimization Fixes and changes: <strong style="color: #f0f0f0;" class="price usd"
-                                    data-original-price="2">$2</strong>
+                                    data-original-price="10">$10</strong>
                             </li>
                         </ul>
                     </div>
@@ -293,24 +293,24 @@
                     <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                         <h4 style="color: #5000e6;">VFX (Particles, Textures)</h4>
                         <p>
-                            Starting at: <strong class="price usd" data-original-price="5">Loading...</strong>
+                            Starting at: <strong class="price usd" data-original-price="8">Loading...</strong>
                         <p>Detailed scripting services:</p>
                         <ul>
                             <li>
                                 Basic VFX (ex; Double Jump Feet Particles, Punching Effects): <strong
-                                    style="color: #f0f0f0;" class="price usd" data-original-price="4">$5/asset</strong>
+                                    style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/asset</strong>
                             </li>
                             <li>
                                 Advanced VFX (ex; Multi-particle VFX, Explosions): <strong style="color: #f0f0f0;"
-                                    class="price usd" data-original-price="11">$11/asset</strong>
+                                    class="price usd" data-original-price="15">$15/asset</strong>
                             </li>
                             <li>
                                 Animated VFX (ex; Sword Slash): <strong style="color: #f0f0f0;" class="price usd"
-                                    data-original-price="12">$12/asset</strong>
+                                    data-original-price="20">$20/asset</strong>
                             </li>
                             <li>
                                 Full Scene VFX (ex; Wind, Particles in a cutscene): <strong style="color: #f0f0f0;"
-                                    class="price usd" data-original-price="10">$10/asset</strong>
+                                    class="price usd" data-original-price="30">$30/asset</strong>
                             </li>
                         </ul>
                     </div>
@@ -320,14 +320,14 @@
                         <h4 style="color: #5000e6;">3D Modeling (Props)</h4>
                         <p>
                             Starting at:
-                            <strong class="price usd" data-original-price="5">Loading...</strong>
+                            <strong class="price usd" data-original-price="7">Loading...</strong>
                         </p>
                         <p>Simple, effective models for game assets, these are limited as I am not completely
                             professional at 3D Modeling:</p>
                         <ul>
                             <li>
                                 Basic Props (e.g. furniture, small items): <strong style="color: #f0f0f0;"
-                                    class="price usd" data-original-price="5">$5/asset</strong>
+                                    class="price usd" data-original-price="7">$7/asset</strong>
                             </li>
                         </ul>
                     </div>
