Update Paradox Cutscene description
Revised the description for the Paradox Cutscene project to clarify the rushed nature of the work and set expectations regarding the showcased skill level.

--- a/portfolio/animation.html
+++ b/portfolio/animation.html
@@ -236,9 +236,7 @@
                             <div class="portfolio-caption-heading">Paradox Cutscene</div>
                             <div class="portfolio-extra-description">
                                 <p>This was a cutscene made for the popular DOORS Fangame; Paradox</p>
-                                <p>It was completely revamped and remade by me and another animator on the team.</p>
-                                <p>I did all of the VFX, Camera work, animation on Grumble, Seek, the trees, and the
-                                    players with another animator helping me on the 4th and 3rd player animation.</p>
+                                <p>This cutscene was extremely rushed due to time constraints and does not properly show my actual skill.</p>
                             </div>
                             <button class="toggle-description" style="display: none;">Show Description <span
                                     class="arrow">&#x25BC;</span></button>
