--- a/portfolio/scripting.html
+++ b/portfolio/scripting.html
@@ -66,7 +66,7 @@
                             From the simplest tasks to complex systems, I write scripts that promise smooth
                             gameplay.</span></p>
 
-                    <p><span style="color: #f0f0f0;">As of <strong>8/27/2025</strong> all code is no longer used with AI and AI is exiled from editing any of my code and I will not use any source of AI for coding.</span></p>
+                    <p><span style="color: #f0f0f0;">As of <strong>8/27/2025</strong> all code is no longer created with AI.</span></p>
                 </div>
             </div>
             <div class="row">
